# haskell-userapp

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  UserApp.cabal  doc-index.html  index.html  stack.yaml  userapp.cabal
OneTuple-0.3.1/: Data-Tuple-OneTuple.html  Data-Tuple-Solo-TH.html  Data-Tuple-Solo.html  OneTuple.haddock  OneTuple.txt  doc-index.html  doc-index.json  index.html
StateVar-1.2.2/: Data-StateVar.html  StateVar.haddock  doc-index.html  doc-index.json  index.html
adjunctions-4.4.2/: Control-Comonad-Representable-Store.html  Control-Comonad-Trans-Adjoint.html  Control-Monad-Representable-Reader.html  Control-Monad-Representable-State.html  Control-Monad-Trans-Adjoint.html  Control-Monad-Trans-Contravariant-Adjoint.html  Control-Monad-Trans-Conts.html  Data-Functor-Adjunction.html  Data-Functor-Contravariant-Adjunction.html  Data-Functor-Contravariant-Rep.html  Data-Functor-Rep.html  adjunctions.haddock  doc-index.html  doc-index.json  index.html
all/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-35.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-63.html  doc-index-64.html  doc-index-92.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  (+10 more)
app/: Main.hs
assoc-1.0.2/: Data-Bifunctor-Assoc.html  Data-Bifunctor-Swap.html  assoc.haddock  doc-index.html  doc-index.json  index.html
base-orphans-0.8.7/: Data-Orphans.html  base-orphans.haddock  base-orphans.txt  doc-index.html  index.html
bifunctors-5.5.13/: Data-Biapplicative.html  Data-Bifunctor-Biap.html  Data-Bifunctor-Biff.html  Data-Bifunctor-Clown.html  Data-Bifunctor-Fix.html  Data-Bifunctor-Flip.html  Data-Bifunctor-Functor.html  Data-Bifunctor-Join.html  Data-Bifunctor-Joker.html  Data-Bifunctor-Product.html  Data-Bifunctor-Sum.html  Data-Bifunctor-TH.html  Data-Bifunctor-Tannen.html  Data-Bifunctor-Wrapped.html  bifunctors.haddock  doc-index.html  doc-index.json  index.html
comonad-5.0.8/: Control-Comonad-Env-Class.html  Control-Comonad-Env.html  Control-Comonad-Hoist-Class.html  Control-Comonad-Identity.html  Control-Comonad-Store-Class.html  Control-Comonad-Store.html  Control-Comonad-Traced-Class.html  Control-Comonad-Traced.html  Control-Comonad-Trans-Class.html  Control-Comonad-Trans-Env.html  Control-Comonad-Trans-Identity.html  Control-Comonad-Trans-Store.html  Control-Comonad-Trans-Traced.html  Control-Comonad.html  Data-Functor-Composition.html  comonad.haddock  comonad.txt  doc-index.html  doc-index.json  index.html
contravariant-1.5.5/: Data-Functor-Contravariant-Compose.html  Data-Functor-Contravariant-Divisible.html  Data-Functor-Contravariant-Generic.html  contravariant.haddock  doc-index.html  doc-index.json  index.html
distributive-0.6.2.1/: Data-Distributive-Generic.html  Data-Distributive.html  distributive.haddock  doc-index.html  doc-index.json  index.html
exceptions-0.10.4/: Control-Monad-Catch-Pure.html  Control-Monad-Catch.html  doc-index.html  doc-index.json  exceptions.haddock  index.html
free-5.1.9/: Control-Alternative-Free-Final.html  Control-Alternative-Free.html  Control-Applicative-Free-Fast.html  Control-Applicative-Free-Final.html  Control-Applicative-Free.html  Control-Applicative-Trans-Free.html  Control-Comonad-Cofree-Class.html  Control-Comonad-Cofree.html  Control-Comonad-Trans-Cofree.html  Control-Comonad-Trans-Coiter.html  Control-Monad-Free-Ap.html  Control-Monad-Free-Church.html  Control-Monad-Free-Class.html  Control-Monad-Free-TH.html  Control-Monad-Free.html  Control-Monad-Trans-Free-Ap.html  Control-Monad-Trans-Free-Church.html  Control-Monad-Trans-Free.html  Control-Monad-Trans-Iter.html  doc-index.html  doc-index.json  free.haddock  free.txt  index.html
indexed-traversable-0.1.2/: Data-Foldable-WithIndex.html  Data-Functor-WithIndex.html  Data-Traversable-WithIndex.html  doc-index.html  doc-index.json  index.html  indexed-traversable.haddock
indexed-traversable-instances-0.1.1.1/: Data-Functor-WithIndex-Instances.html  doc-index.html  index.html  indexed-traversable-instances.haddock
invariant-0.5.6/: Data-Functor-Invariant-TH.html  Data-Functor-Invariant.html  doc-index.html  doc-index.json  index.html  invariant.haddock  invariant.txt
kan-extensions-5.2.5/: Control-Comonad-Density.html  Control-Monad-Co.html  Control-Monad-Codensity.html  Data-Functor-Contravariant-Coyoneda.html  Data-Functor-Contravariant-Day.html  Data-Functor-Contravariant-Yoneda.html  Data-Functor-Coyoneda.html  Data-Functor-Day-Curried.html  Data-Functor-Day.html  Data-Functor-Invariant-Day.html  Data-Functor-Kan-Lan.html  Data-Functor-Kan-Ran.html  Data-Functor-Yoneda.html  doc-index.html  doc-index.json  index.html  kan-extensions.haddock
lens-5.0.1/: Control-Exception-Lens.html  Control-Lens-At.html  Control-Lens-Combinators.html  Control-Lens-Cons.html  Control-Lens-Each.html  Control-Lens-Empty.html  Control-Lens-Equality.html  Control-Lens-Extras.html  Control-Lens-Fold.html  Control-Lens-Getter.html  Control-Lens-Indexed.html  Control-Lens-Internal-Bazaar.html  Control-Lens-Internal-ByteString.html  Control-Lens-Internal-CTypes.html  Control-Lens-Internal-Coerce.html  Control-Lens-Internal-Context.html  Control-Lens-Internal-Deque.html  Control-Lens-Internal-Exception.html  Control-Lens-Internal-FieldTH.html  Control-Lens-Internal-Fold.html  Control-Lens-Internal-Getter.html  Control-Lens-Internal-Indexed.html  Control-Lens-Internal-Instances.html  Control-Lens-Internal-Iso.html  Control-Lens-Internal-Level.html  Control-Lens-Internal-List.html  Control-Lens-Internal-Magma.html  Control-Lens-Internal-Prism.html  (+100 more)
(+422 files in other folders)
