name:                  userapp
version:               0.3.0
synopsis:              Code from leanpub.com/finding-success-in-haskell
description:           Implementation of code from Finding Success in Haskell by Julie Moronuki and Chris Martin
homepage:              https://github.com/frankhjung/userapp#readme
license:               BSD3
license-file:          LICENSE
author:                Frank H Jung
maintainer:            frankhjung@linux.com
copyright:             Copyright © 2019-2020 Frank H Jung
category:              education
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

executable userapp-exe
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:       base == 4.12.0.0
                     , text == 1.2.3.1
                     , userapp

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base == 4.12.0.0
                     , text == 1.2.3.1
                     , validation == 1.1

test-suite userapp-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall
  build-depends:       base == 4.12.0.0
                     , HUnit == 1.6.0.0
                     , text == 1.2.3.1
                     , validation == 1.1
                     , userapp

source-repository head
  type:                git
  location:            https://github.com/frankhjung/userapp

