name:                  userapp
version:               0.1.0
synopsis:              Code from leanpub.com/finding-success-in-haskell
description:           Implementation of code from Finding Success in Haskell by Julie Moronuki and Chris Martin
homepage:              https://github.com/frankhjung/userapp#readme
license:               BSD3
license-file:          LICENSE
author:                Frank H Jung
maintainer:            frankhjung@linux.com
copyright:             Copyright © 2019-2020 Frank H Jung
category:              education
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10
extra-source-files:    README.md

executable userapp
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , text
                     , userapp

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base
                     , text
                     , validation

test-suite userapp-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , text
                     , validation
                     , userapp

source-repository head
  type:                git
  location:            https://github.com/frankhjung/userapp

