cabal-version:        3.0

name:                 userapp
version:              0.5.0
synopsis:             Code from leanpub.com/finding-success-in-haskell
description:          Implementation of code from Finding Success in Haskell by Julie Moronuki and Chris Martin
homepage:             https://github.com/frankhjung/userapp#readme
license:              BSD-2-Clause
license-file:         LICENSE
author:               Frank H Jung
maintainer:           frankhjung@linux.com
copyright:            Copyright © 2019-2022 Frank H Jung
category:             education
extra-source-files:   README.md

source-repository     head
  type:               git
  location:           https://github.com/frankhjung/userapp

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:    UserLib
  build-depends:      base >= 4 && < 5
                    , text >= 1.2 && < 1.3
                    , validation >= 1.1 && < 1.2

executable userapp
  default-language:   Haskell2010
  hs-source-dirs:     app
                    , src
  main-is:            Main.hs
  ghc-options:        -Wall
  build-depends:      base
                    , text
                    , validation
                    , userapp
  other-modules:      UserLib

test-suite userapp-test
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
                    , src
  main-is:            UserSpec.hs
  build-depends:      base
                    , HUnit >= 1.6 && < 1.7
                    , text
                    , validation
                    , userapp
  other-modules:      UserLib
